# jOS

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clang-format.cmake  grub.cfg  toolchain.cmake
Docs/Lesson 1. Quick start/: Getting_started.md
Docs/Lesson 1. Базавый минимум/: Getting_started.md  Kernel_debugging.md
Docs/Lesson 2. Зачем мне смотреть на голый металл/: Video memory.md
arch/x86/: toolchain-x86.cmake
arch/x86/Interrupt/: interrupt_handler.cpp  interrupt_handler.h  isr.asm
arch/x86/VGA/: vgadisplay.cpp  vgadisplay.h  vgadriver.cpp  vgadriver.h
arch/x86/boot/: boot.asm
arch/x86/core/chars/: chars_code.h  vga_modecolor.h
arch/x86/core/portIO/: port.asm  port.cpp  port.h
arch/x86/core/types/: data_types.h
arch/x86/drivers/: irqdriver.h  keyboarddriver.cpp  keyboarddriver.h  pitdriver.cpp  pitdriver.h
arch/x86/interrupt/: interrupt_handler.cpp  interrupt_handler.h
arch/x86/src/VGADisplay/: CMakeLists.txt  Display.cpp
arch/x86/src/core/types/: CMakeLists.txt  base.cpp
arch/x86/table/: flush_table.asm  segment_descriptor.h
arch/x86/table/GDT/: global_descriptor.cpp  global_descriptor.h
arch/x86/table/IDT/: interrupt_descriptor.cpp  interrupt_descriptor.h
boot/: boot.asm
include/arch/x86/VGADisplay/: Display.hpp
include/core/bit_ops/: bitset.hpp
include/core/chars/: chars.hpp
include/core/types/: base.hpp
kernel/: kernel.cpp  linker.ld
lib/: CMakeLists.txt
lib/data/bit_ops/: CMakeLists.txt  bitset.cpp  bitset.h  bitset.hpp
lib/data/memory/: CMakeLists.txt  memory.cpp  memory.h
lib/display/: CMakeLists.txt  display.cpp  display.h  display_types.h  log_level.h
